--- a/app/views/bikes/edit_alert.html.haml
+++ b/app/views/bikes/edit_alert.html.haml
@@ -14,17 +14,17 @@
           .row
             .col-sm-12
               %p
-                We've found targeted sharing on social media to have a <em>huge</em> effect on recovering stolen bikes.
+                = t(".weve_found_targeted_sharing_on_social_med")
               %p
-                = "Bike Index can help by purchasing targeted ads on Facebook to spread the word about your stolen #{@bike.type}."
+                = t(".bike_index_can_help_by_purchasing_targete", biketype: @bike.type)
 
           = form_tag edit_bike_url(@bike), method: :get, id: "js-select-plan-form" do
             = hidden_field_tag :page, :alert_purchase
             = hidden_field_tag :selected_plan_id
             .row
-              %h3.text-center.w-100 Select Plan
+              %h3.text-center.w-100= t(".select_plan")
             .row
               = render @theft_alert_plans, selected_plan: @selected_theft_alert_plan, preferred_plan: @theft_alert_plans.max_by(&:amount_cents)
             .row
               .text-center.w-100.mt-2
-                %button.btn.btn-lg.btn-primary Select Plan
+                %button.btn.btn-lg.btn-primary= t(".select_plan")
