--- a/app/views/bikes/_bike.html.haml
+++ b/app/views/bikes/_bike.html.haml
@@ -10,13 +10,13 @@
             = [bike.year, bike.mnfg_name].reject(&:blank?).join(' ')
           = bike.frame_model.to_s
       %ul.attr-list
-        = bike.attr_list_item(bike.serial_display, 'Serial')
-        = bike.attr_list_item(bike.frame_colors.to_sentence, 'Primary colors')
+        = bike.attr_list_item(bike.serial_display, t(".serial"))
+        = bike.attr_list_item(bike.frame_colors.to_sentence, t(".primary_colors"))
       - if bike.current_stolen_record.present?
         %ul.attr-list
           %li
             %span.attr-title
-              = bike.recovered ? "Recovered" : "Stolen"
+              = bike.recovered ? t(".recovered") : "Stolen"
             %span.convertTime
               = l bike.current_stolen_record.date_stolen, format: :convert_time
-          = bike.attr_list_item(bike.short_address(bike.current_stolen_record), 'Location')
+          = bike.attr_list_item(bike.short_address(bike.current_stolen_record), t(".location"))
