--- a/app/views/bikes/_bike_show_overlays.html.haml
+++ b/app/views/bikes/_bike_show_overlays.html.haml
@@ -8,36 +8,36 @@
     - modal_body = capture_haml do
       .modal-body
         %p
-          = "Please tell us how you got your #{@bike.type} back, we really care!"
+          = t(".please_tell_us_how_you_got_your_biketype_", biketype: @bike.type)
           %br
           %strong
-            It's also how we get better at recovering bikes.
+            = t(".its_also_how_we_get_better_at_recovering_")
 
         = form_for @stolen_record, url: bike_recovery_path(bike_id: @bike.id) do |f|
           = hidden_field_tag :token, stolen_record.recovery_link_token
           .form-group
-            = f.label :recovered_description, 'How did you get it back?'
+            = f.label :recovered_description, t(".how_did_you_get_it_back")
             = f.text_area :recovered_description, class: 'form-control'
           .form-group
-            = f.label :date_recovered, 'When did you recover it?', class: 'form-well-label'
+            = f.label :date_recovered, t(".when_did_you_recover_it"), class: 'form-well-label'
             - f.object.date_recovered = TimeParser.round(f.object.date_recovered || Time.current)
             = f.hidden_field :timezone, value: "", class: "hiddenFieldTimezone"
             = f.datetime_local_field :date_recovered, max: Time.current.end_of_day, step: 3600, required: true, class: 'form-control'
           .checkbox
             %label
               = f.check_box :index_helped_recovery
-              Did we help?
+              = t(".did_we_help")
           .checkbox
             %label
               = f.check_box :can_share_recovery
-              Can we share your story?
+              = t(".can_we_share_your_story")
           .modal-btn-footer
             .row
               .col-xs-6.col-xs-push-6
-                = submit_tag 'Mark recovered', class: 'btn btn-success'
+                = submit_tag t(".mark_recovered"), class: 'btn btn-success'
               .col-xs-6.col-xs-pull-6
                 %button.btn.btn-secondary{ 'data-dismiss' => 'modal', type: 'button' }
-                  Nevermind
+                  = t(".nevermind")
 
 
 - if current_user.present?
@@ -45,12 +45,12 @@
     - modal_title = "Your #{@bike.type}"
     - modal_body = capture_haml do
       .modal-body
-        %p= "We're honored to have your #{@bike.type} on the Index."
-        %p Claim it so you can update your listing.
+        %p= t(".were_honored_to_have_your_biketype_on_the", biketype: @bike.type)
+        %p= t(".claim_it_so_you_can_update_your_listing")
       .modal-btn-footer
         .row
           .col-xs-6.col-xs-push-3
-            = link_to "Claim #{@bike.type}", ownership_path(@bike.current_ownership), class: "btn btn-success"
+            = link_to t(".claim_biketype", biketype: @bike.type), ownership_path(@bike.current_ownership), class: "btn btn-success"
 
   - elsif @bike.authorized_for_user?(current_user) && !@bike.authorized_by_organization?(u: current_user)
     .bike-overlay-wrapper
@@ -59,27 +59,27 @@
           -# If the bike user is actually the current bike owner, do this
           - if @bike.user == current_user
             - if @bike.user_hidden
-              %strong= "This #{@bike.type} is hidden."
-              No one can see it but you
+              %strong= t(".this_biketype_is_hidden", biketype: @bike.type)
+              = t(".no_one_can_see_it_but_you")
 
             - if @bike.user?
               - if @bike.recovered
-                = "Thank you for recovering this #{@bike.type}!"
+                = t(".thank_you_for_recovering_this_biketype", biketype: @bike.type)
               - elsif @bike.stolen
-                = "We're really bummed your #{@bike.type} was stolen."
+                = t(".were_really_bummed_your_biketype_was_stol", biketype: @bike.type)
               - else
-                = "Whoa, this awesome #{@bike.type} is yours!"
+                = t(".whoa_this_awesome_biketype_is_yours", biketype: @bike.type)
 
               - if @bike.public_images.any?
-                Add some more information about it.
+                = t(".add_some_more_information_about_it")
               - else
                 - if @bike.stolen
-                  Add a picture so people know what to look for!
+                  = t(".add_a_picture_so_people_know_what_to_look")
                 - else
-                  Add a picture of it, so everyone can admire its beauty!
+                  = t(".add_a_picture_of_it_so_everyone_can_admir")
           - else # The bike has been sent to someone other than the current_user
-            = "You sent this #{@bike.type} to <em>#{@bike.current_ownership.owner_email}</em> and it hasn't been claimed yet. You can update it.".html_safe
-          = link_to  "Edit", edit_bike_path, class: "btn btn-secondary"
+            = t(".you_sent_this_biketype_to_embikecurrent_o", biketype: @bike.type, bikecurrent_ownershipowner_email: @bike.current_ownership.owner_email).html_safe
+          = link_to  t(".edit"), edit_bike_path, class: "btn btn-secondary"
 
 - if modal_title.present?
   -# This is for stolen modal or claim modal
