--- a/app/views/bikes/_bike_u.html.haml
+++ b/app/views/bikes/_bike_u.html.haml
@@ -8,28 +8,28 @@
             = link_to bike_u.title_u, bike_u.list_link_url(target)
           %p
             %span.attr-title
-              Serial
+              = t(".serial")
             %span.serial-text
               = bike_u.serial_display
           %p
-            %span.attr-title Colors
+            %span.attr-title= t(".colors")
             = bike_u.frame_colors.to_sentence
         - if bike_u.stolen
           .theft-information
             %h3
-              Status:
+              = t(".status")
               - if bike_u.recovered
-                Recovered/Found
+                = t(".recoveredfound")
               - else
-                STOLEN
+                = t(".stolen")
             - if bike_u.current_stolen_record.present?
               %p
                 %span.attr-title
-                  From
+                  = t(".from")
                 = bike_u.short_address(bike_u.current_stolen_record)
               %p
                 %span.attr-title
-                  Stolen on
+                  = t(".stolen_on")
                 = bike_u.current_stolen_record.date_stolen.strftime("%Y-%m-%d")
 
       %a.image-holder{ href: bike_url(bike_u) }
