--- a/app/views/bikes/_edit_primary_menu.html.haml
+++ b/app/views/bikes/_edit_primary_menu.html.haml
@@ -2,7 +2,7 @@
 
 %nav.primary-edit-form-well-menu
   - if @bike.stolen?
-    %h3.nav-group-header Theft Details
+    %h3.nav-group-header= t(".theft_details")
     %ul
       - @theft_templates.each do |template, description|
         %li{ class: "edit-menu-#{template}" }
@@ -11,7 +11,7 @@
             %h4= description
 
   %h3.nav-group-header
-    = "#{@bike.type} Details"
+    = t(".biketype_details", biketype: @bike.type)
   %ul
     - @bike_templates.each do |template, description|
       %li{ class: "edit-menu-#{template}" }
@@ -21,7 +21,7 @@
 
   .form-well-edit-page-select
     %span.menu-select-overlay
-      You are editing
+      = t(".you_are_editing")
     -# ignore this select in dirty forms
     %select.dirtyignore
       - @edit_templates.each do |template, description|
@@ -30,4 +30,4 @@
 
   .edit-form-well-submit-wrapper
     = hidden_field_tag :edit_template, @edit_template
-    = submit_tag 'Save changes', class: 'btn btn-lg btn-primary', disabled: is_disabled
+    = submit_tag t(".save_changes"), class: 'btn btn-lg btn-primary', disabled: is_disabled
