--- a/app/views/bikes/bike_fields/_revised_colors.html.haml
+++ b/app/views/bikes/bike_fields/_revised_colors.html.haml
@@ -10,34 +10,34 @@
     = f.label :primary_frame_color, class: 'form-well-label'
 
     .form-well-input.fancy-select.unfancy
-      = f.collection_select(:primary_frame_color_id, Color.all, :id, :name, required: true, prompt: 'Choose color' )
-      %a.inline-input-help{ title: 'Color help', data: { toggle: 'popover', content: primary_color_help_content } }
+      = f.collection_select(:primary_frame_color_id, Color.all, :id, :name, required: true, prompt: t(".choose_color") )
+      %a.inline-input-help{ title: t(".color_help"), data: { toggle: 'popover', content: primary_color_help_content } }
         ?
     .right-input-help
       %a#add-secondary.optional-form-block{ class: ('currently-hidden' if display_secondary_color), data: { target: '#secondary-color', toggle: '#rm-secondary' } }
         %span.context-display-help
           +
-        Add a color
+        = t(".add_a_color")
       %a#rm-secondary.optional-form-block{ class: ('currently-hidden' unless display_secondary_color), data: { target: '#secondary-color', toggle: '#add-secondary', action: 'rm-block' } }
         %span.context-display-help
           &ndash;
-        Remove color
+        = t(".remove_color")
 
   #secondary-color.form-group.row.hidden-other{ class: ('unhidden' if display_secondary_color) }
     = f.label :secondary_frame_color, class: 'form-well-label'
     .form-well-input.fancy-select.unfancy
-      = f.collection_select(:secondary_frame_color_id, Color.all, :id, :name, prompt: 'Choose color' )
+      = f.collection_select(:secondary_frame_color_id, Color.all, :id, :name, prompt: t(".choose_color") )
     .right-input-help
       %a#add-tertiary.optional-form-block{ class: ('currently-hidden' if display_tertiary_color), data: { target: '#tertiary-color', toggle: '#rm-tertiary' } }
         %span.context-display-help
           +
-        Add a color
+        = t(".add_a_color")
       %a#rm-tertiary.optional-form-block{ class: ('currently-hidden' unless display_tertiary_color), data: { target: '#tertiary-color', toggle: '#add-tertiary', action: 'rm-block' } }
         %span.context-display-help
           &ndash;
-        Remove color
+        = t(".remove_color")
 
   #tertiary-color.form-group.row.hidden-other{ class: ('unhidden' if display_tertiary_color) }
     = f.label :tertiary_frame_color, class: 'form-well-label'
     .form-well-input.fancy-select.unfancy
-      = f.collection_select(:tertiary_frame_color_id, Color.all, :id, :name, prompt: 'Choose color' )
+      = f.collection_select(:tertiary_frame_color_id, Color.all, :id, :name, prompt: t(".choose_color") )
