--- a/app/views/bikes/bike_fields/_stolen_location.html.haml
+++ b/app/views/bikes/bike_fields/_stolen_location.html.haml
@@ -4,24 +4,24 @@
 .related-fields
   .form-group.row.fancy-select.unfancy
     %label.form-well-label
-      Where was it #{stolen_type}?
+      = t(".where_was_it_stolen_type", stolen_type: stolen_type)
     .form-well-input#stolen_record_us_id{ data: { usid: Country.united_states.id } }
-      = srecord.collection_select(:country_id, Country.all, :id, :name, { required: true, prompt: 'Choose country' }, { class: 'country-select-input form-control' } )
+      = srecord.collection_select(:country_id, Country.all, :id, :name, { required: true, prompt: t(".choose_country") }, { class: 'country-select-input form-control' } )
 
   .form-group.row
     %label.form-well-label
     .form-well-input
-      = srecord.text_field :street, required: true, placeholder: 'Address or intersection', class: 'form-control'
+      = srecord.text_field :street, required: true, placeholder: t(".address_or_intersection"), class: 'form-control'
 
   .form-group.row
     %label.form-well-label
     .form-well-input
-      = srecord.text_field :city, required: true, placeholder: 'City', class: 'form-control'
+      = srecord.text_field :city, required: true, placeholder: t(".city"), class: 'form-control'
 
   .form-group.row
     %label.form-well-label
     .form-well-input
-      = srecord.text_field :zipcode, placeholder: 'Zipcode', class: 'form-control'
+      = srecord.text_field :zipcode, placeholder: t(".zipcode"), class: 'form-control'
 
   .form-group.row.fancy-select-placeholder.unfancy.hidden-other{ class: state_class }
     %label.form-well-label
@@ -32,4 +32,4 @@
     %label.form-well-label
     %label.form-well-input
       = srecord.check_box :show_address
-      Publicly display exact address theft occurred
+      = t(".publicly_display_exact_address_theft_occu")
