--- a/app/views/bikes/edit_alert_purchase.html.haml
+++ b/app/views/bikes/edit_alert_purchase.html.haml
@@ -24,13 +24,13 @@
 
             .row
               %h3.text-center.w-100
-                Confirm your plan
+                = t(".confirm_your_plan")
               .copy.text-center
-                You've made an excellent choice! Please confirm it below.
+                = t(".youve_made_an_excellent_choice_please_con")
             .row
               .copy.text-center
                 %strong
-                  = "Here is what you'll get with the #{@selected_theft_alert_plan.name} plan:"
+                  = t(".here_is_what_youll_get_with_the_selected_", selected_theft_alert_planname: @selected_theft_alert_plan.name)
             .row
               .description
                 = @selected_theft_alert_plan.description_html.html_safe
@@ -38,16 +38,16 @@
               .copy.text-center
                 %strong
                   - price = @selected_theft_alert_plan.amount_cents
-                  = "Charge: #{number_to_currency(price / 100.0, unit: '$')}"
+                  = t(".charge_number_to_currencyprice_1000_unit", number_to_currencyprice_1000_unit: number_to_currency(price / 100.0, unit: '$'))
             .row
               .text-center.w-100.mt-2
                 %button.btn.btn-lg.btn-primary#js-confirm-plan-button
-                  &check; Confirm
+                  = t(".check_confirm")
 
                 = link_to edit_bike_path(@bike, page: :alert), method: :get do
                   %button.btn.btn-lg.btn-secondary
                     %span.times &times;
-                    Cancel
+                    = t(".cancel")
 
         = render partial: "theft_alerts_table", locals: { theft_alerts: @theft_alerts }
 
