--- a/app/views/bikes/edit_groups.html.haml
+++ b/app/views/bikes/edit_groups.html.haml
@@ -7,44 +7,44 @@
         .form-wrap#edit_bike_organizations
           .form-well-form-header
             %h3
-              Groups and Organizations
+              = t(".groups_and_organizations")
           .col-xs-12
             %p
-              Are you part of a school? Want to bolster a local advocacy organization? Add the organization here.
+              = t(".are_you_part_of_a_school_want_to_bolster_")
 
           - if @bike.bike_organizations.any?
             .related-fields.no-divider-row
               - if @bike.bike_organizations.where(organization_id: @bike.creation_organization_id) && @bike.creation_organization
                 .form-group.row
                   %label.form-well-label
-                    Creation organization
+                    = t(".creation_organization")
                   %p.form-well-input-static.bike_organization_static_input{ data: { orgid: @bike.creation_organization_id } }
                     = @bike.creation_organization.name
                     %span.can-edit-checkbox
                       %label.checkbox-inline.not-fixed
                         = check_box_tag "organization_ids_can_edit_claimed[]", @bike.creation_organization_id, @bike.editable_organizations.pluck(:id).include?(@bike.creation_organization_id), multiple: true
-                        = "Can edit this #{@bike.type}"
+                        = t(".can_edit_this_biketype", biketype: @bike.type)
                   .right-input-help
                     %a.optional-form-block.remove-organization{ href: '#' }
                       %span.context-display-help
                         &ndash;
-                      Remove
+                      = t(".remove")
               - @bike.bike_organizations.each_with_index do |bike_organization, index|
                 - next if bike_organization.organization == @bike.creation_organization
                 .form-group.row
                   %label.form-well-label.less-strong
-                    Other organizations
+                    = t(".other_organizations")
                   %p.form-well-input-static.bike_organization_static_input{ data: { orgid: bike_organization.organization_id } }
                     = bike_organization.organization.name
                     %span.can-edit-checkbox
                       %label.checkbox-inline.not-fixed
                         = check_box_tag "organization_ids_can_edit_claimed[]", bike_organization.organization_id, bike_organization.can_edit_claimed, multiple: true
-                        = "Can edit this #{@bike.type}"
+                        = t(".can_edit_this_biketype", biketype: @bike.type)
                   .right-input-help
                     %a.optional-form-block.remove-organization{ href: '#' }
                       %span.context-display-help
                         &ndash;
-                      Remove
+                      = t(".remove")
 
           :javascript
             = "window.organizations = #{Organization.approved.map { |organization| { name: organization.name, id: organization.id } }.to_json };"
@@ -77,6 +77,6 @@
             %a.add_fields#add_additional_organization{ href: '#', role: 'button' }
               %span.context-display-help
                 +
-              Add an organization
+              = t(".add_an_organization")
 
           = render "shared/form_well_footer_save"
