--- a/app/views/bikes/edit_ownership.html.haml
+++ b/app/views/bikes/edit_ownership.html.haml
@@ -6,10 +6,10 @@
       .col-md-8.form-well
         .form-wrap
           .form-well-form-header
-            %h3 Transfer Ownership
+            %h3= t(".transfer_ownership")
           .col-xs-12
             %p
-              = "Sell, trade or give away this #{@bike.type}? Enter the new owner's email to transfer the registration."
+              = t(".sell_trade_or_give_away_this_biketype_ent", biketype: @bike.type)
           .form-group.row.unnested-field.no-divider-row
             = f.label :owner_email, class: 'form-well-label'
             .form-well-input
