--- a/app/views/bikes/edit_report_stolen.html.haml
+++ b/app/views/bikes/edit_report_stolen.html.haml
@@ -15,4 +15,4 @@
               %h3= @edit_templates[@edit_template]
             .no-divider-row.full-width-button
               %a.btn.btn-danger.btn-lg#mark-stolen-btn
-                = "This #{@bike.type} is stolen or missing!"
+                = t(".this_biketype_is_stolen_or_missing", biketype: @bike.type)
