--- a/app/views/public_images/_admin_new_form.html.haml
+++ b/app/views/public_images/_admin_new_form.html.haml
@@ -1,11 +1,11 @@
-.card.bg-light.filepond-container
+.card.bg-light
   .card-body
-    = form_for PublicImage.new, html: {class: "UppyDragDrop-One"} do |f|
-      .photo-upload-fields
+    .UppyForm
+      = form_for PublicImage.new do |f|
         - if imageable_type == 'Blog'
           = hidden_field_tag :blog_id, @blog.id
         - elsif imageable_type == 'Organization'
           = hidden_field_tag :organization_id, @organization.id
         - elsif imageable_type == 'MailSnippet'
           = hidden_field_tag :mail_snippet_id, @mail_snippet.id
-        = f.file_field :image
+        = f.file_field :image, html: {multiple: "multiple", name: "public_image[image]"}
